--- a/Problem_set1.ipynb
+++ b/Problem_set1.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,8 +47,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +93,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +273,7 @@
        "max    1899.500000     5.780000  "
       ]
      },
-     "execution_count": 231,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -356,12 +361,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'change'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/pandas/core/indexes/base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3804\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3805\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3806\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "File \u001b[0;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'change'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[22], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexcess return\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mchange\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m-\u001b[39m df_bond[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      2\u001b[0m df_sp500[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexcess return\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mchange\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m-\u001b[39m df_bond[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m#regression\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m#df['excess return'] = a + beta(df_sp500['excess return']) + error \u001b[39;00m\n",
+      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/pandas/core/frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   4100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   4101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 4102\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   4103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   4104\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
+      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/pandas/core/indexes/base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[1;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[1;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[1;32m   3810\u001b[0m     ):\n\u001b[1;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[0;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'change'"
+     ]
+    }
+   ],
    "source": [
-    "df['excess return'] = df['change'] - df_bond['']\n",
-    "df_sp500['excess return'] = df['change'] - df_bond['']\n",
+    "#df['excess return'] = df['change'] - df_bond['']\n",
+    "#df_sp500['excess return'] = df['change'] - df_bond['']\n",
     "\n",
     "#regression\n",
     "#df['excess return'] = a + beta(df_sp500['excess return']) + error "
@@ -369,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +616,7 @@
        "[2632 rows x 8 columns]"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +665,7 @@
        "Name: 2015-01-02 00:00:00, dtype: object"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,91 +677,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
       "Collecting statsmodels\n",
-      "  Downloading statsmodels-0.14.4-cp312-cp312-macosx_11_0_arm64.whl.metadata (9.2 kB)\n",
-      "Collecting numpy<3,>=1.22.3 (from statsmodels)\n",
-      "  Downloading numpy-2.2.2-cp312-cp312-macosx_14_0_arm64.whl.metadata (62 kB)\n",
-      "Collecting scipy!=1.9.2,>=1.8 (from statsmodels)\n",
-      "  Downloading scipy-1.15.1-cp312-cp312-macosx_14_0_arm64.whl.metadata (61 kB)\n",
-      "Collecting pandas!=2.1.0,>=1.4 (from statsmodels)\n",
-      "  Downloading pandas-2.2.3-cp312-cp312-macosx_11_0_arm64.whl.metadata (89 kB)\n",
-      "Collecting patsy>=0.5.6 (from statsmodels)\n",
-      "  Downloading patsy-1.0.1-py2.py3-none-any.whl.metadata (3.3 kB)\n",
-      "Requirement already satisfied: packaging>=21.3 in /Users/katyasva/miniconda3/lib/python3.12/site-packages (from statsmodels) (24.1)\n",
-      "Collecting python-dateutil>=2.8.2 (from pandas!=2.1.0,>=1.4->statsmodels)\n",
-      "  Downloading python_dateutil-2.9.0.post0-py2.py3-none-any.whl.metadata (8.4 kB)\n",
-      "Collecting pytz>=2020.1 (from pandas!=2.1.0,>=1.4->statsmodels)\n",
-      "  Downloading pytz-2025.1-py2.py3-none-any.whl.metadata (22 kB)\n",
-      "Collecting tzdata>=2022.7 (from pandas!=2.1.0,>=1.4->statsmodels)\n",
-      "  Downloading tzdata-2025.1-py2.py3-none-any.whl.metadata (1.4 kB)\n",
-      "Collecting six>=1.5 (from python-dateutil>=2.8.2->pandas!=2.1.0,>=1.4->statsmodels)\n",
-      "  Downloading six-1.17.0-py2.py3-none-any.whl.metadata (1.7 kB)\n",
-      "Downloading statsmodels-0.14.4-cp312-cp312-macosx_11_0_arm64.whl (9.9 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m9.9/9.9 MB\u001b[0m \u001b[31m9.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hDownloading numpy-2.2.2-cp312-cp312-macosx_14_0_arm64.whl (5.1 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.1/5.1 MB\u001b[0m \u001b[31m9.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0mm\n",
-      "\u001b[?25hDownloading pandas-2.2.3-cp312-cp312-macosx_11_0_arm64.whl (11.4 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m11.4/11.4 MB\u001b[0m \u001b[31m9.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m \u001b[36m0:00:01\u001b[0mm\n",
-      "\u001b[?25hDownloading patsy-1.0.1-py2.py3-none-any.whl (232 kB)\n",
-      "Downloading scipy-1.15.1-cp312-cp312-macosx_14_0_arm64.whl (24.9 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m24.9/24.9 MB\u001b[0m \u001b[31m9.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hDownloading python_dateutil-2.9.0.post0-py2.py3-none-any.whl (229 kB)\n",
-      "Downloading pytz-2025.1-py2.py3-none-any.whl (507 kB)\n",
-      "Downloading tzdata-2025.1-py2.py3-none-any.whl (346 kB)\n",
-      "Downloading six-1.17.0-py2.py3-none-any.whl (11 kB)\n",
-      "Installing collected packages: pytz, tzdata, six, numpy, scipy, python-dateutil, patsy, pandas, statsmodels\n",
-      "Successfully installed numpy-2.2.2 pandas-2.2.3 patsy-1.0.1 python-dateutil-2.9.0.post0 pytz-2025.1 scipy-1.15.1 six-1.17.0 statsmodels-0.14.4 tzdata-2025.1\n"
-     ]
-    }
-   ],
-   "source": [
-    "#!pip install statsmodels\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 254,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[33mWARNING: Package(s) not found: statsmodels\u001b[0m\n",
+      "  Downloading statsmodels-0.14.4-cp39-cp39-macosx_11_0_arm64.whl (9.9 MB)\n",
+      "\u001b[K     |████████████████████████████████| 9.9 MB 684 kB/s eta 0:00:01     |█████████████████▎              | 5.4 MB 684 kB/s eta 0:00:07\n",
+      "\u001b[?25hRequirement already satisfied: numpy<3,>=1.22.3 in /Users/katyasva/Library/Python/3.9/lib/python/site-packages (from statsmodels) (2.0.2)\n",
+      "Requirement already satisfied: pandas!=2.1.0,>=1.4 in /Users/katyasva/Library/Python/3.9/lib/python/site-packages (from statsmodels) (2.2.3)\n",
+      "Requirement already satisfied: packaging>=21.3 in /Users/katyasva/Library/Python/3.9/lib/python/site-packages (from statsmodels) (24.2)\n",
+      "Collecting scipy!=1.9.2,>=1.8\n",
+      "  Downloading scipy-1.13.1-cp39-cp39-macosx_12_0_arm64.whl (30.3 MB)\n",
+      "\u001b[K     |████████████████████████████████| 30.3 MB 11.8 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting patsy>=0.5.6\n",
+      "  Downloading patsy-1.0.1-py2.py3-none-any.whl (232 kB)\n",
+      "\u001b[K     |████████████████████████████████| 232 kB 8.6 MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: pytz>=2020.1 in /Users/katyasva/Library/Python/3.9/lib/python/site-packages (from pandas!=2.1.0,>=1.4->statsmodels) (2024.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/katyasva/Library/Python/3.9/lib/python/site-packages (from pandas!=2.1.0,>=1.4->statsmodels) (2.9.0.post0)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /Users/katyasva/Library/Python/3.9/lib/python/site-packages (from pandas!=2.1.0,>=1.4->statsmodels) (2025.1)\n",
+      "Requirement already satisfied: six>=1.5 in /Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/site-packages (from python-dateutil>=2.8.2->pandas!=2.1.0,>=1.4->statsmodels) (1.15.0)\n",
+      "Installing collected packages: scipy, patsy, statsmodels\n",
+      "Successfully installed patsy-1.0.1 scipy-1.13.1 statsmodels-0.14.4\n",
+      "\u001b[33mWARNING: You are using pip version 21.2.4; however, version 25.0 is available.\n",
+      "You should consider upgrading via the '/Library/Developer/CommandLineTools/usr/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "pip show statsmodels"
+    "%pip install statsmodels"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "import statsmodels as sm\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sm.tools import add_constant"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'sm' is not defined",
+     "ename": "AttributeError",
+     "evalue": "module 'statsmodels' has no attribute 'add_constant'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[247], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m X \u001b[38;5;241m=\u001b[39m df_merged[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexcess_return_X_M\u001b[39m\u001b[38;5;124m'\u001b[39m]  \u001b[38;5;66;03m# Independent variable\u001b[39;00m\n\u001b[1;32m      7\u001b[0m y \u001b[38;5;241m=\u001b[39m df_merged[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexcess_return_apple\u001b[39m\u001b[38;5;124m'\u001b[39m]  \u001b[38;5;66;03m# Dependent variable (Apple excess return)\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m X \u001b[38;5;241m=\u001b[39m \u001b[43msm\u001b[49m\u001b[38;5;241m.\u001b[39madd_constant(X)  \u001b[38;5;66;03m# Adds intercept term (for α)\u001b[39;00m\n\u001b[1;32m     10\u001b[0m model \u001b[38;5;241m=\u001b[39m sm\u001b[38;5;241m.\u001b[39mOLS(y, X)\u001b[38;5;241m.\u001b[39mfit()  \u001b[38;5;66;03m# Run Ordinary Least Squares Regression\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# Print Regression Results\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'sm' is not defined"
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[32], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m X \u001b[38;5;241m=\u001b[39m df_merged[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexcess_return_X_M\u001b[39m\u001b[38;5;124m'\u001b[39m]  \u001b[38;5;66;03m# Independent variable\u001b[39;00m\n\u001b[1;32m      7\u001b[0m y \u001b[38;5;241m=\u001b[39m df_merged[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexcess_return_apple\u001b[39m\u001b[38;5;124m'\u001b[39m]  \u001b[38;5;66;03m# Dependent variable (Apple excess return)\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m X \u001b[38;5;241m=\u001b[39m \u001b[43msm\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madd_constant\u001b[49m(X)\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# Run OLS Regression\u001b[39;00m\n\u001b[1;32m     12\u001b[0m model \u001b[38;5;241m=\u001b[39m sm\u001b[38;5;241m.\u001b[39mOLS(y, X, missing\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdrop\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mfit()  \u001b[38;5;66;03m# `missing='drop'` ensures NaN rows are dropped\u001b[39;00m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'statsmodels' has no attribute 'add_constant'"
      ]
     }
    ],
